--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "http-errors": "~1.8.0",
     "jade": "~1.11.0",
     "morgan": "~1.10.0",
-    "nodemon": "^2.0.7"
+    "nodemon": "^2.0.7",
+    "ejs": "~2.6.1"
   }
 }
